2006-05-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/sched.c: Make scheduler queue Events increments by 50 instead of 1000
	in order not to waste a lot fo memory

2006-05-10  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/sock.c: Make Ns_SockTimedWait have NULL as timeoutPtr so it will
        check for immediate condition of the socket without waiting.

        * nsd/nsd.h:
        * nsd/driver.c: Improved WriterThread to not to block on sending
        data and honor timeout if socket still not ready.

        * nsd/return.c: Added Accept-Ranges header as default to
        inform clients that we support range requests. Tested with
        mplayer HTTP streaming.

        *tests/testserver/pages/timeout.tcl:
        *tests/testserver/pages/400return.adp: Added missing files

2006-05-10  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/ns_cache.test:
	* include/ns.h:
	* nsd/cache.c:
	* nsd/tclcache.c: Added timeout parameter to Ns_CacheCreateEx
	to assign cache-specific timeout which will be used instead of
	global config.tcl.cachetimeout and will eliminate specifying
	-timeout on every ns_cache_eval call. If specified as 0 on cache
	create, cache will behave as before, taking -timeout or using
	global value from the config. Introduced new API function
	Ns_CacheGetConfig that returns configured cache parameters.

	* nsd/tclcmds.c: Added new public function Ns_CacheGetExpiration
	and Tcl command	ns_cache_info that returns entry size and
	expiration if set.

	* nsd/nsconf.c:
	* nsd/dns.c: Updated to reflect API  change and added new config
	parameter dnswaittimeout which is set to 0 by default

2006-06-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclinit.c: Fixed return value of non-void call.
	* nsd/cache.c:  Fixed Ns_CacheSetValueExpires() to correctly
	set expiry time of the entry.
	Changed Ns_CacheFindEntry() NOT to auto-expire expired entries
	as this collides with Ns_CacheWaitCreateEntry API call.
