@@ -75,7 +75,6 @@ test ns_parseargs-4.1 {Options} -body {
 } -result [list 0 B 0 D 0]
 
 
-
 test ns_parseargs-5.1 {Defaults} -body {
     ns_parseargs {{-a A} -- x {y Y} {args {1 2 3}}} {X}
     list $a $x $y $args
@@ -89,6 +88,13 @@ test ns_parseargs-5.2 {Defaults} -body {
 } -cleanup {
     unset -nocomplain -- a x y args
 } -result [list aaa xxx yyy [list 3 2 1]]
+
+test ns_parseargs-5.3 {Defaults script} -body {
+    ns_parseargs {-a -b -c -d -e {-$l {info level}} } {-b B -d D}
+    list [info exists a] $b [info exists c] $d [info exists e] [set l]
+} -cleanup {
+    unset -nocomplain -- a b c d e l
+} -result [list 0 B 0 D 0 0]
 
 
 
