@@ -1,3 +1,13 @@
+2006-05-19  Vlad Seryakov  <seryakov@users.sf.net>
+
+        * tclimg.c: Removed compiler warnings
+
+        * include/ns.h:
+        * nsd/tclobjv.c: Added Ns_ObjvEval for runtime
+        arguments evaluation and extended ns_parseargs so that
+        params in form {-$name {script}} will be assigned with default
+        value of the script result.
+
 2006-05-18  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* nsd/sched.c: Make scheduler queue Events increments by 50 instead of 1000
